@@ -1,5 +1,6 @@
 * Changelog
 ** Release 7.1
+  * Safe renamed ~lsp-diagnose~ to ~lsp-doctor~.
   * Add ~lsp-modeline-code-actions-segments~ for a better customization.
 ** Release 7.0.1
   * Introduced ~lsp-diagnostics-mode~.
